gcp mysql cloud

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,16 @@
 # MySQL settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springdatajpa
+spring.datasource.url=jdbc:mysql://decisive-talon-412706:asia-south1:revspeed:3306/springdatajpa
 spring.datasource.username=root
-spring.datasource.password=Aakash@123
+spring.datasource.password=revspeed
+
+#spring.datasource.url=jdbc:mysql://google/revspeed?cloudSqlInstance=decisive-talon-412706:us-central1:revspeed&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false
+#spring.jpa.properties.hibernate.default_schema=public
+#spring.datasource.username=root
+#spring.datasource.password=revspeed
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
 #spring.datasource.url=${JPA_URL}${JPA_DB}
 #spring.datasource.username=${JPA_USER}
 #spring.datasource.password=${JPA_PWD}
