--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9090
-spring.profiles.active=dev
+#spring.profiles.active=dev
 # MYSQL setting
-spring.datasource.url=jdbc:mysql://localhost:3306/springdatajpa
+spring.datasource.url=jdbc:mysql://35.200.183.27:3306/springdatajpa
 spring.datasource.username=root
-spring.datasource.password=Aakash@123
+spring.datasource.password=revspeed
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
